<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2016 Pajato Technologies LLC.

This file is part of Pajato GameChat.

GameChat is free software: you can redistribute it and/or modify it under the terms of the GNU
General Public License as published by the Free Software Foundation, either version 3 of the
License, or (at your option) any later version.

GameChat is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
Public License for more details.

You should have received a copy of the GNU General Public License along with GameChat.  If not, see
http://www.gnu.org/licenses
-->
<resources>
    <string name="app_name">SignIn</string>
    <string name="choice_text">or</string>
    <string name="descSignInLogo">Sign in logo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="loading">Loading</string>
    <string name="selectSignInModeText">Choose to sign in with a social network or use a registered email address and password.</string>
    <string name="signIn">Sign In</string>
    <string name="sign_in_with_email">Sign in with Email"</string>
    <string name="sign_in_with_facebook">Sign in with Facebook"</string>
    <string name="sign_in_with_google">Sign in with Google"</string>
</resources>
